[gd_scene load_steps=20 format=2]

[ext_resource path="res://NPC/Cat Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Cat.gd" type="Script" id=2]
[ext_resource path="res://Monocraft.otf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 55.0735, 11.2281 )

[sub_resource type="DynamicFont" id=20]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.50001, 11.8247 )

[node name="Cat" type="KinematicBody2D"]
scale = Vector2( 1, 0.93026 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6.44981 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "Idle"
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6.06246e-09, 8.59974 )
rotation = -3.14159
scale = Vector2( 1.01682, -0.690395 )
shape = SubResource( 6 )

[node name="dialog" type="Label" parent="."]
margin_left = -31.0
margin_top = -24.7243
margin_right = 46.0
margin_bottom = 5.27573
custom_fonts/font = SubResource( 20 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leadgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 23.6493 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 12.8996 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 7 )

[node name="leadgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 8, 23.6493 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
